2007-03-12  Guillaume Smet <guillaume-pg@smet.org>

	* improved stderr support by adding isContextual() method to lines
	* fixed normalization of query text for quote escaping
	* the timezone is not always present in stderr prefix so make it
	optional
	* all three per report from Stephen Denne in
	http://pgfoundry.org/forum/forum.php?thread_id=1204&forum_id=555

2007-02-05  Guillaume Smet <guillaume-pg@smet.org>

	* made syslog pattern matching a bit more permissive

2006-12-25  Guillaume Smet <guillaume-pg@smet.org>

	* renamed history per connection to history per pid

2006-12-23  Guillaume Smet <guillaume-pg@smet.org>

	* merged 0.7 branch into HEAD
	* updated GeSHi to 1.0.7.16
	* renamed -timeunit option to -durationunit
	* implemented -durationunit option for graphs and fixed hourly stats
	table header
	* PHP errors are now written in stderr instead of the standard output

2006-12-22  Open Wide <guillaume.smet@openwide.fr>
	* added a history per connection report

2006-12-11  Open Wide <guillaume.smet@openwide.fr>

	* [0.7] improved error detection and added exit code
	* [0.7] released 0.7.2

2006-12-08  Open Wide <guillaume.smet@openwide.fr>

	* [0.7] fixed hourly stats when there are hours with no query at all
	* [0.7] commited a tutorial for RPM packaging per Devrim Gunduz

2006-11-24  Guillaume Smet <guillaume-pg@smet.org>

	* [0.7] fixed [#1000792] tooltip dates incorrect

2006-10-27  Guillaume Smet <guillaume-pg@smet.org>

	* work on adding a unit option (graphs don't support it yet)
	* [0.7] fixed a typo that prevents -from option from working
	* [0.7] fixed an error when pgFouine does not find any query
	* [0.7] allowed -from and -to options to be used separately
	* [0.7] released 0.7.1

2006-10-14  Guillaume Smet <guillaume-pg@smet.org>

	* updated GeSHi to 1.0.7.14 to fix [#1000753]

2006-09-17  Guillaume Smet <guillaume-pg@smet.org>

	* resynced prepared statements support with current CVS tip
	* added duration in history report